<resources>
    <string name="app_name">NewPosit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!--Strings botones-->
    <string name="ok">Aceptar</string>
    <string name="cancel">Cancelar</string>

    <!--Strings dialogo borrar-->
    <string name="mensaje_confirm_borrar">¿Seguro que quieres borrar esta nota?</string>
    <string name="etiqueta_dialogo_borrar">Eliminar: </string>

    <!--nota-->
    <string name="titulo">Titulo</string>
    <string name="nota">Nota</string>
    <string name="fecha_recordatorio">Fecha recordatorio</string>
    <string name="mas">+</string>

    <!--imagen-->
    <string name="selecciona_una_imagen">Seleccione una imagen: </string>
    <string name="etiqueta_dialogo_imagen">Añadir imagen: </string>
    <string name="etiqueta_dialogo_foto">Hacer foto </string>
    <string name="etiqueta_dialogo_galeria">Seleccionar imagen </string>
    <string name="fecha_recordatorio_dia">mié., 19 oct. 2016</string>
    <string name="fecha_recordatorio_hora">19:52:00</string>
    <string name="add">Añadir</string>
    <string name="delete">Borrar</string>
    <string name="save">Guardar</string>
    <string name="alert">Alerta</string>
    <string name="alert_ok">Alerta OK</string>
    <string name="alert_delete">Borrar alerta</string>
    <string name="ordenar">Ordenar</string>
    <string name="videos">Vídeos</string>
    <string name="imagenes">Imágenes</string>
    <string name="audio">Audio</string>
    <string name="lista">Lista</string>
    <string name="search">Buscar</string>
    <string name="share">Compartir</string>
    <string name="settings_description">Filtrar por notas</string>
    <string name="search_hint">Buscar</string>
    <string name="search_label">Nota</string>
    <string name="name">Name</string>
    <string name="checkbox">CheckBox</string>
    <string name="hint">hint</string>
    <string name="eliminar_ltima_lista">Eliminar última lista</string>
    <string name="a_adir_lista">Añadir lista</string>
    <string name="texto">Lista</string>
    <string name="title_activity_settings">Settings</string>
    <!-- NUEVOS -->
    <string name="elijecolor">Añadir color</string>
    <string name="color2">color2</string>
    <string name="color1">color1</string>
    <string name="color3">color3</string>
    <string name="color4">color4</string>
    <string name="color5">color5</string>
    <string name="color6">color6</string>
    <string name="a_adir_imagen">Añadir imagen</string>
    <string name="a_adir_video">Añadir video</string>
    <string name="a_adir_audio">Añadir audio</string>
    <string name="imagenAdd">Imagen adjunta</string>
    <string name="videoAdd">Video adjunto</string>
    <string name="listaAdd">Lista</string>
    <string name="pdf">Generar PDF</string>
    <string name="audioAdd">Audio adjunto</string>
    <string name="elegir_opcion">Elija una opción:</string>
    <string-array name="opcionesPDF">
        <item>Crear PDF</item>
        <item>Compartir PDF</item>
    </string-array>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="color">Color</string>
    <string name="color_texto">Color texto</string>
    <string name="contentdescription">contentDescription</string>
    <string name="add_alarm">Añadir alarma</string>
    <string name="hora_recordatorio">Hora recordatorio</string>
    <string name="dia_recordatorio">Fecha recordatorio</string>
    <string name="edit_alarm">"Editar alarma "</string>
    <string name="hora_">"Hora: "</string>
    <string name="dia_">"Día: "</string>
    <string name="color_text">color_dialog_test</string>
    <string name="_pdf">.pdf</string>
    <string name="recordatorio_">"Recordatorio: "</string>
    <string name="galeria">Galeria</string>
    <string name="camara">Cámara</string>
    <string name="opcion">Elige una opcion</string>
    <string name="recordatorio">Recordatorio</string>
    <string name="todo">Todo</string>
    <string name="listas">Listas</string>
    <string name="title_activity_maps">Mapa</string>
    <string name="title_activity_maps_location">MapsLocation</string>
    <string name="maps">Maps</string>
    <string name="last_location">Última localización</string>
    <string name="mapa">Mapa</string>
    <string name="location">Localización</string>
    <string name="longitud">Longitud</string>
    <string name="latitud">Latitud</string>


</resources>
