<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/menu_notas">


    <item
        android:id="@+id/pdf"
        android:icon="@mipmap/ic_share"
        android:title="@string/pdf"
        app:showAsAction="always" />


    <item
        android:id="@+id/ok_alert"
        android:icon="@mipmap/ic_ok_alert"
        android:title="@string/alert_ok"
        app:showAsAction="always" />


    <item
        android:id="@+id/save"
        android:icon="@mipmap/ic_save"
        android:title="@string/save"
        app:showAsAction="always" />

    <item
        android:id="@+id/bottom_sheet_item"
        android:icon="@mipmap/ic_box"
        android:title="@string/bottom_sheet_behavior"
        app:showAsAction="always" />


</menu>