<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheet"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:orientation="horizontal"
    app:layout_behavior="@string/bottom_sheet_behavior"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    android:background="@android:color/transparent"
    android:weightSum="1"
    app:statusBarBackground="@android:color/transparent">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_color1_check"
            android:id="@+id/imageButton"
            android:layout_weight="0.1666"
            android:background="@null"
            android:contentDescription="@string/color1" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_color2"
            android:id="@+id/imageButton2"
            android:layout_weight="0.1666"
            android:background="@null"
            android:contentDescription="@string/color2" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_color3"
            android:id="@+id/imageButton3"
            android:layout_weight="0.1666"
            android:background="@null"
            android:contentDescription="@string/color3" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_color4"
            android:id="@+id/imageButton4"
            android:layout_weight="0.1666"
            android:background="@null"
            android:contentDescription="@string/color4" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_color5"
            android:id="@+id/imageButton5"
            android:layout_weight="0.1666"
            android:background="@null"
            android:contentDescription="@string/color5" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_color6"
            android:id="@+id/imageButton6"
            android:layout_weight="0.1666"
            android:background="@null"
            android:contentDescription="@string/color6" />


    </LinearLayout>