<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".vistas.notas.VistaNota"
    tools:showIn="@layout/app_bar_nota">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/etTitulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/titulo"
                    android:imeOptions="actionNext" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/etNota"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/nota"
                    android:imeOptions="actionNext"
                    android:inputType="textMultiLine" />
            </android.support.design.widget.TextInputLayout>





            <!--Fecha recordatorio-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/id_icono_fecha_recordatorio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/add"
                    android:paddingEnd="5dp"
                    android:paddingStart="5dp"
                    app:srcCompat="@drawable/ic_alarm_black_24dp" />

                <!-- Fecha dia mes año ejemplo (jue. 1 sept 2016) -->
                <TextView
                    android:id="@+id/tvFechaRecordatorioDia"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingTop="3dp"
                    android:text="@string/fecha_recordatorio_dia"
                    android:textStyle="normal|bold"
                    tools:ignore="NestedWeights" />

                <!-- Fecha hora minuto segundo ejemplo (12:52:30) -->
                <TextView
                    android:id="@+id/tvFechaRecordatorioHora"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingTop="3dp"
                    android:text="@string/fecha_recordatorio_hora" />
            </LinearLayout>

            <Button
                android:id="@+id/id_imagen_btn"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mas" />

            <ImageView
                android:id="@+id/id_imagen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/add"
                android:cropToPadding="true"
                android:paddingEnd="5dp"
                android:paddingStart="5dp" />


        </LinearLayout>

    </ScrollView>

</RelativeLayout>