<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/id_activity_detail_nota"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.izv.dam.newquip.vistas.notas.VistaNota"
    tools:ignore="MergeRootFrame">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/detail_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary" />

    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView
        android:id="@+id/item_detail_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorNota1"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <include
            android:id="@+id/id_include_layout"
            layout="@layout/activity_nota"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </android.support.v4.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/footer"
        style="@android:style/ButtonBar"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_gravity="bottom"
        android:background="@color/primary"
        android:orientation="horizontal"
        android:weightSum="3">

        <ImageButton
            android:id="@+id/anadir_imagen"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/a_adir_imagen"
            android:src="@mipmap/ic_insert_photo"
            android:text="@string/a_adir_imagen" />

        <ImageButton
            android:id="@+id/id_palette"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/contentdescription"
            android:src="@mipmap/ic_palette"
            android:text="@string/color_texto" />

        <ImageButton
            android:id="@+id/anadir_lista"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/a_adir_lista"
            android:src="@mipmap/ic_add_list"
            android:text="@string/a_adir_lista" />
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
